heart fill opacity & footer menu

--- a/Menu_La_palette_du_gout.html
+++ b/Menu_La_palette_du_gout.html
@@ -27,7 +27,7 @@
                         <div class="presentation_menu_name_restaurant">
                             <h1>La palette du goût</h1>
                             <div class="button_like">
-                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
                         </div>
                         <div class="menu_restaurant">
@@ -35,18 +35,19 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <div class="check">
-                                        <i class="far fa-check-circle"></i>
+                                    <div class="dish_card">
+                                        <div class="dish_card_box">
                                         <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Fricassée d'escargot</p>
-                                                <p>Au piment d'espelette</p>
+                                                <div class="dish_name">
+                                                    <p class="span">Fricassée d'escargot</p>
+                                                    <p>Au piment d'espelette</p>
+                                                </div>
+                                                <div class="dish_price">25€</div>
                                             </div>
-                                            <div class="dish_price">25€</div>
+                                            <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="check">
-                                        <i class="far fa-check-circle"></i>
+                                    <div class="dish_card">
                                         <div class="dish">
                                             <div class="dish_name">
                                                 <p class="span">Foie gras de canard mi-cuit</p>
@@ -54,9 +55,9 @@
                                             </div>
                                             <div class="dish_price">35€</div>
                                         </div>
-                                    </div>
-                                    <div class="check">
                                         <i class="far fa-check-circle"></i>
+                                    </div>
+                                    <div class="dish_card">
                                         <div class="dish">
                                             <div class="dish_name">
                                                 <p class="span">Oeuf au plat</p>
@@ -64,14 +65,16 @@
                                             </div>
                                             <div class="dish_price">20€</div>
                                         </div>
+                                        <i class="far fa-check-circle"></i>
                                     </div>
+                                    
                                 </div>
                             </div>
                             <div class="menu">
                                 <h2>plats</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block meal">
-                                    <div class="check">
+                                    <div class="dish_card">
                                         <i class="far fa-check-circle"></i>
                                         <div class="dish">
                                             <div class="dish_name">
@@ -81,7 +84,7 @@
                                             <div class="dish_price">40€</div>
                                         </div>
                                     </div>
-                                    <div class="check">
+                                    <div class="dish_card">
                                         <i class="far fa-check-circle"></i>
                                         <div class="dish">
                                             <div class="dish_name">
@@ -91,7 +94,7 @@
                                             <div class="dish_price">35€</div>
                                         </div>
                                     </div>
-                                    <div class="check">
+                                    <div class="dish_card">
                                         <i class="far fa-check-circle"></i>
                                         <div class="dish">
                                             <div class="dish_name">
@@ -107,7 +110,7 @@
                                 <h2>desserts</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block dessert">
-                                    <div class="check">
+                                    <div class="dish_card">
                                         <i class="far fa-check-circle"></i>
                                         <div class="dish">
                                             <div class="dish_name">
@@ -117,7 +120,7 @@
                                             <div class="dish_price">18€</div>
                                         </div>
                                     </div>
-                                    <div class="check">
+                                    <div class="dish_card">
                                         <i class="far fa-check-circle"></i>
                                         <div class="dish">
                                             <div class="dish_name">
@@ -127,7 +130,7 @@
                                             <div class="dish_price">22€</div>
                                         </div>
                                     </div>
-                                    <div class="check">
+                                    <div class="dish_card">
                                         <i class="far fa-check-circle"></i>
                                         <div class="dish">
                                             <div class="dish_name">
@@ -147,26 +150,28 @@
                         </div>
                     </div>
                 </section>
-            <footer>
-                <p class="logo">ohmyfood</p>
-                <div class="footer_block">
-                    <p><a href="#">
-                        <i class="fas fa-utensils"></i>
-                        Proposer un restaurant
-                    </a></p>
-                    <p><a href="#">
-                        <i class="fas fa-hands-helping"></i>
-                        Devenir partenaire
-                    </a></p>
-                </div>
-                <div class="footer_block">
-                    <p><a href="#">
-                        Mentions légales
-                    </a></p>
-                    <p><a href="mailto:xxx@yopmail.com">
-                        Contact
-                    </a></p>
-                </div>
+                <footer>
+                    <p class="logo">ohmyfood</p>
+                    <div class="footer">
+                    <div class="footer_block">
+                        <p><a href="#">
+                            <i class="fas fa-utensils"></i>
+                            Proposer un restaurant
+                        </a></p>
+                        <p><a href="#">
+                            <i class="fas fa-hands-helping"></i>
+                            Devenir partenaire
+                        </a></p>
+                    </div>
+                    <div class="footer_block last">
+                        <p><a href="#">
+                            Mentions légales
+                        </a></p>
+                        <p><a href="mailto:xxx@yopmail.com">
+                            Contact
+                        </a></p>
+                    </div>
+                    </div>
             </footer>
             </div>
         </body>
