--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                                         <p>Ménilmontant</p>
                                     </div>
                                     <div class="button_like">
-                                        <i class="far fa-heart"></i>
                                         <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
@@ -125,7 +124,7 @@
                                         <p>Cité Rouge</p>
                                     </div>
                                     <div class="button_like">
-                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +140,7 @@
                                         <p>Folie Méricourt</p>
                                     </div>
                                     <div class="button_like">
-                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
