responsive rotate check

--- a/index.html
+++ b/index.html
@@ -44,35 +44,29 @@
                     <div class="functionalities">
                         <div class="button_functionalities">
                             <a href="#">
-                            <form method="post" action="button_choice_restaurant.php">
                                 <div class="number_button_functionalities">1</div>
                                 <div class="button_functionalities_instruction">
                                     <i class="fas fa-mobile-alt"></i>
-                                    <button type="button" class="button_choice">Choisissez un restaurant</button>   
+                                    <div class="button_choice">Choisissez un restaurant</div>   
                                 </div>
-                            </form>
                             </a>
                         </div>
                         <div class="button_functionalities">
                             <a href="#">
-                            <form method="post" action="button_choice_menu.php">
                                 <div class="number_button_functionalities">2</div>
                                 <div class="button_functionalities_instruction">
                                     <i class="fas fa-list-ul"></i>
-                                    <input type="submit" name="button_choice_menu" class="button_choice" value="Composez votre menu"/>
+                                    <div class="button_choice">Composez votre menu</div>
                                 </div>
-                            </form>
                             </a>
                         </div>
                         <div class="button_functionalities">
                             <a href="#">
-                            <form method="post" action="button_reservation.php">
                                 <div class="number_button_functionalities">3</div>
                                 <div class="button_functionalities_instruction">
                                     <i class="fas fa-store"></i>
-                                    <input type="submit" name="button_reservation" class="button_choice" value="Dégustez au restaurant"/>
+                                    <div class="button_choice">Dégustez au restaurant</div>
                                 </div>
-                            </form>
                             </a>
                         </div>
                     </div>
