--- a/Menu_La_palette_du_gout.html
+++ b/Menu_La_palette_du_gout.html
@@ -48,24 +48,28 @@
                                         </div>
                                     </div>
                                     <div class="dish_card">
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Foie gras de canard mi-cuit</p>
-                                                <p>Et ses copeaux de truffe noire</p>
+                                        <div class="dish_card_box">
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Foie gras de canard mi-cuit</p>
+                                                    <p>Et ses copeaux de truffe noire</p>
+                                                </div>
+                                                <div class="dish_price">35€</div>
                                             </div>
-                                            <div class="dish_price">35€</div>
+                                            <i class="far fa-check-circle"></i>
                                         </div>
-                                        <i class="far fa-check-circle"></i>
                                     </div>
                                     <div class="dish_card">
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Oeuf au plat</p>
-                                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                        <div class="dish_card_box">
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Oeuf au plat</p>
+                                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                                </div>
+                                                <div class="dish_price">20€</div>
                                             </div>
-                                            <div class="dish_price">20€</div>
+                                            <i class="far fa-check-circle"></i>
                                         </div>
-                                        <i class="far fa-check-circle"></i>
                                     </div>
                                     
                                 </div>
@@ -75,33 +79,39 @@
                                 <div class="underline"></div>
                                 <div class="dish_block meal">
                                     <div class="dish_card">
-                                        <i class="far fa-check-circle"></i>
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Filet de boeuf aux herbes</p>
-                                                <p>Accompagné de sa ribambelle de légumes</p>
+                                        <div class="dish_card_box">
+                                            <i class="far fa-check-circle"></i>
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Filet de boeuf aux herbes</p>
+                                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                                </div>
+                                                <div class="dish_price">40€</div>
                                             </div>
-                                            <div class="dish_price">40€</div>
                                         </div>
                                     </div>
                                     <div class="dish_card">
-                                        <i class="far fa-check-circle"></i>
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Parmentier de queue de boeuf</p>
-                                                <p>À la truffe noire sur sa purée de panais</p>
+                                        <div class="dish_card_box">
+                                            <i class="far fa-check-circle"></i>
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Parmentier de queue de boeuf</p>
+                                                    <p>À la truffe noire sur sa purée de panais</p>
+                                                </div>
+                                                <div class="dish_price">35€</div>
                                             </div>
-                                            <div class="dish_price">35€</div>
                                         </div>
                                     </div>
                                     <div class="dish_card">
-                                        <i class="far fa-check-circle"></i>
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Filet de turbot</p>
-                                                <p>Aux agrumes</p>
+                                        <div class="dish_card_box">
+                                            <i class="far fa-check-circle"></i>
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Filet de turbot</p>
+                                                    <p>Aux agrumes</p>
+                                                </div>
+                                                <div class="dish_price">44€</div>
                                             </div>
-                                            <div class="dish_price">44€</div>
                                         </div>
                                     </div>
                                 </div>
@@ -111,33 +121,39 @@
                                 <div class="underline"></div>
                                 <div class="dish_block dessert">
                                     <div class="dish_card">
-                                        <i class="far fa-check-circle"></i>
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Paris-Brest</p>
-                                                <p>Revisité</p>
+                                        <div class="dish_card_box">
+                                            <i class="far fa-check-circle"></i>
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Paris-Brest</p>
+                                                    <p>Revisité</p>
+                                                </div>
+                                                <div class="dish_price">18€</div>
                                             </div>
-                                            <div class="dish_price">18€</div>
                                         </div>
                                     </div>
                                     <div class="dish_card">
-                                        <i class="far fa-check-circle"></i>
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Macaron au chocolat d'exception </p>
-                                                <p>Et glace à la vanille de Madagascar</p>
+                                        <div class="dish_card_box">
+                                            <i class="far fa-check-circle"></i>
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Macaron au chocolat d'exception </p>
+                                                    <p>Et glace à la vanille de Madagascar</p>
+                                                </div>
+                                                <div class="dish_price">22€</div>
                                             </div>
-                                            <div class="dish_price">22€</div>
                                         </div>
                                     </div>
                                     <div class="dish_card">
-                                        <i class="far fa-check-circle"></i>
-                                        <div class="dish">
-                                            <div class="dish_name">
-                                                <p class="span">Mousse au chocolat </p>
-                                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                        <div class="dish_card_box">
+                                            <i class="far fa-check-circle"></i>
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Mousse au chocolat </p>
+                                                    <p>Au piment d'Espelette et à la truffe noire</p>
+                                                </div>
+                                                <div class="dish_price">23€</div>
                                             </div>
-                                            <div class="dish_price">23€</div>
                                         </div>
                                     </div>
                                 </div>
