ajout de tous les menus & button check & ellipsis

--- a/Menu_A_la_francaise.html
+++ b/Menu_A_la_francaise.html
@@ -5,7 +5,7 @@
             <link rel="stylesheet" href="./style.css"/>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script>
-            <title>OhMyFood La palette du goût</title>
+            <title>OhMyFood À la française</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -22,10 +22,10 @@
                     <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood"/>
                 </header>
                 <section id="presentation_menu">
-                    <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant La palette du goût"/>
+                    <img src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo restaurant À la française"/>
                     <div id="container_menu">
                         <div class="presentation_menu_name_restaurant">
-                            <h1>La palette du goût</h1>
+                            <h1>À la française</h1>
                             <div class="button_like">
                                 <i class="fas fa-heart"></i>
                             </div>
@@ -39,8 +39,8 @@
                                         <div class="dish_card_box">
                                         <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Fricassée d'escargot</p>
-                                                    <p>Au piment d'espelette</p>
+                                                    <p class="span">Tartare de poulpe acidulé</p>
+                                                    <p>Aux zestes d'orange</p>
                                                 </div>
                                                 <div class="dish_price">25€</div>
                                             </div>
@@ -51,8 +51,8 @@
                                         <div class="dish_card_box">
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Foie gras de canard mi-cuit</p>
-                                                    <p>Et ses copeaux de truffe noire</p>
+                                                    <p class="span">Velouté de légumes d'antan</p>
+                                                    <p>Carotte, panais, topinambour</p>
                                                 </div>
                                                 <div class="dish_price">35€</div>
                                             </div>
@@ -63,8 +63,8 @@
                                         <div class="dish_card_box">
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Oeuf au plat</p>
-                                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                                    <p class="span">Soupe à l'oignon</p>
+                                                    <p>Revisitée</p>
                                                 </div>
                                                 <div class="dish_price">20€</div>
                                             </div>
@@ -83,8 +83,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Filet de boeuf aux herbes</p>
-                                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                                    <p class="span">Coquilles Saint-Jacques</p>
+                                                    <p>Accompagnées d'une purée de panais</p>
                                                 </div>
                                                 <div class="dish_price">40€</div>
                                             </div>
@@ -95,8 +95,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Parmentier de queue de boeuf</p>
-                                                    <p>À la truffe noire sur sa purée de panais</p>
+                                                    <p class="span">Magret de canard</p>
+                                                    <p>Et parmentier de pommes de terre</p>
                                                 </div>
                                                 <div class="dish_price">35€</div>
                                             </div>
@@ -107,8 +107,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Filet de turbot</p>
-                                                    <p>Aux agrumes</p>
+                                                    <p class="span">Pigeonneau d'Ile-et-Vilaine</p>
+                                                    <p>Sur son lit de gnocchhis aux légumes</p>
                                                 </div>
                                                 <div class="dish_price">44€</div>
                                             </div>
@@ -125,8 +125,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Paris-Brest</p>
-                                                    <p>Revisité</p>
+                                                    <p class="span">Pétales de violettes glacés</p>
+                                                    <p>Et purée de noisettes</p>
                                                 </div>
                                                 <div class="dish_price">18€</div>
                                             </div>
@@ -137,8 +137,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Macaron au chocolat d'exception</p>
-                                                    <p>Et glace à la vanille de Madagascar</p>
+                                                    <p class="span">Fondant au chocolat</p>
+                                                    <p>Revisité</p>
                                                 </div>
                                                 <div class="dish_price">22€</div>
                                             </div>
@@ -149,8 +149,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Mousse au chocolat</p>
-                                                    <p>Au piment d'Espelette et à la truffe noire</p>
+                                                    <p class="span">Millefeuille croustillant</p>
+                                                    <p>Myrtilles et pâte d'amande</p>
                                                 </div>
                                                 <div class="dish_price">23€</div>
                                             </div>
