--- a/Menu_La_note_enchantee.html
+++ b/Menu_La_note_enchantee.html
@@ -5,7 +5,7 @@
             <link rel="stylesheet" href="./style.css"/>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script>
-            <title>OhMyFood La palette du goût</title>
+            <title>OhMyFood La note enchantée</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -22,10 +22,10 @@
                     <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood"/>
                 </header>
                 <section id="presentation_menu">
-                    <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant La palette du goût"/>
+                    <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant La note enchantée"/>
                     <div id="container_menu">
                         <div class="presentation_menu_name_restaurant">
-                            <h1>La palette du goût</h1>
+                            <h1>La note enchantée</h1>
                             <div class="button_like">
                                 <i class="fas fa-heart"></i>
                             </div>
@@ -39,8 +39,8 @@
                                         <div class="dish_card_box">
                                         <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Fricassée d'escargot</p>
-                                                    <p>Au piment d'espelette</p>
+                                                    <p class="span">Ravioles de foie gras</p>
+                                                    <p>Accompagnés de leur crème à la truffe</p>
                                                 </div>
                                                 <div class="dish_price">25€</div>
                                             </div>
@@ -51,8 +51,8 @@
                                         <div class="dish_card_box">
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Foie gras de canard mi-cuit</p>
-                                                    <p>Et ses copeaux de truffe noire</p>
+                                                    <p class="span">Caviar osciètre</p>
+                                                    <p>Sur blini à la farine de blé noir</p>
                                                 </div>
                                                 <div class="dish_price">35€</div>
                                             </div>
@@ -63,15 +63,26 @@
                                         <div class="dish_card_box">
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Oeuf au plat</p>
-                                                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                                                    <p class="span">Homard et espuma de potiron</p>
+                                                    <p>Mariné aux zestes d'orange</p>
                                                 </div>
                                                 <div class="dish_price">20€</div>
                                             </div>
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    
+                                    <div class="dish_card">
+                                        <div class="dish_card_box">
+                                            <div class="dish">
+                                                <div class="dish_name">
+                                                    <p class="span">Foie gras de canard cuit entier</p>
+                                                    <p>Confiture de figue et pain toasté</p>
+                                                </div>
+                                                <div class="dish_price">35€</div>
+                                            </div>
+                                            <i class="far fa-check-circle"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="menu">
@@ -83,8 +94,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Filet de boeuf aux herbes</p>
-                                                    <p>Accompagné de sa ribambelle de légumes</p>
+                                                    <p class="span">Noix de coquilles Saint-Jacques</p>
+                                                    <p>Sur lit de purée de céléri-rave</p>
                                                 </div>
                                                 <div class="dish_price">40€</div>
                                             </div>
@@ -95,8 +106,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Parmentier de queue de boeuf</p>
-                                                    <p>À la truffe noire sur sa purée de panais</p>
+                                                    <p class="span">Langoustine poêlée</p>
+                                                    <p>Purée de patate douce</p>
                                                 </div>
                                                 <div class="dish_price">35€</div>
                                             </div>
@@ -107,8 +118,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Filet de turbot</p>
-                                                    <p>Aux agrumes</p>
+                                                    <p class="span">Mijoté de queue de boeuf</p>
+                                                    <p>Et riz sauvage aux zestes de citron</p>
                                                 </div>
                                                 <div class="dish_price">44€</div>
                                             </div>
@@ -125,8 +136,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Paris-Brest</p>
-                                                    <p>Revisité</p>
+                                                    <p class="span">Macaron noisette et chocolat</p>
+                                                    <p>Glace au caramel brun et sel de Guérande</p>
                                                 </div>
                                                 <div class="dish_price">18€</div>
                                             </div>
@@ -137,8 +148,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Macaron au chocolat d'exception</p>
-                                                    <p>Et glace à la vanille de Madagascar</p>
+                                                    <p class="span">Baba au rhum revisité</p>
+                                                    <p>Avec son coulis de citron</p>
                                                 </div>
                                                 <div class="dish_price">22€</div>
                                             </div>
@@ -149,8 +160,8 @@
                                             <i class="far fa-check-circle"></i>
                                             <div class="dish">
                                                 <div class="dish_name">
-                                                    <p class="span">Mousse au chocolat</p>
-                                                    <p>Au piment d'Espelette et à la truffe noire</p>
+                                                    <p class="span">Tarte au citron meringuée</p>
+                                                    <p>Déstructurée</p>
                                                 </div>
                                                 <div class="dish_price">23€</div>
                                             </div>
