--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </a>
                         </div>
                         <div class="block_carte_restaurant">
-                            <a href="" title="Accéder au menu" target="_blank">
+                            <a href="./Menu_La_note_enchantee.html" title="Accéder au menu" target="_blank">
                             <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant La note enchantée"/>
                                 <div class="icon_new">Nouveau</div>
@@ -109,7 +109,7 @@
                             </a>
                         </div>
                         <div class="block_carte_restaurant">
-                            <a href="" title="Accéder au menu" target="_blank">
+                            <a href="./Menu_A_la_francaise.html" title="Accéder au menu" target="_blank">
                             <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo restaurant À la française"/>
                                 <div class="carte_restaurant_infos">
@@ -125,7 +125,7 @@
                             </a>
                         </div>
                         <div class="block_carte_restaurant">
-                            <a href="" title="Accéder au menu" target="_blank">
+                            <a href="./Menu_Le_delice_des_sens.html" title="Accéder au menu" target="_blank">
                             <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo restaurant Le délice des sens"/>
                                 <div class="carte_restaurant_infos">
