--- a/Menu_La_note_enchantee.html
+++ b/Menu_La_note_enchantee.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8"/>
             <link rel="stylesheet" href="./style.css"/>
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script>
+            <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script><!--Icons Font Awesome-->
             <title>OhMyFood La note enchantée</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +22,7 @@
                     <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood"/>
                 </header>
                 <section id="presentation_menu">
+                    <!--Restaurant presentation-->
                     <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant La note enchantée"/>
                     <div id="container_menu">
                         <div class="presentation_menu_name_restaurant">
@@ -30,6 +31,7 @@
                                 <i class="fas fa-heart"></i>
                             </div>
                         </div>
+                        <!--Restaurant menu-->
                         <div class="menu_restaurant">
                             <div class="menu">
                                 <h2>entrées</h2>
