--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
         <head>
             <meta charset="UTF-8"/>
             <link rel="stylesheet" href="./style.css"/>
-            <meta name="viewport" content="width=device-width, initial-scale=1"><!--Règles responsive-->
-            <!--Source des symboles utilisés Font Awesome-->
-            <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <script src="https://kit.fontawesome.com/dccdede72c.js" crossorigin="anonymous"></script><!--Icons Font Awesome-->
             <title>OhMyFood</title>
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,12 +14,15 @@
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
         </head>
         <body>
+            <!--Loading spinner-->
             <div class="page"></div>
             <div class="loader">ohmyfood</div>
+            <!--Main block-->
             <div id="main_page">
                 <header>
                     <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="logo ohmyfood"/>
                 </header>
+                <!--Website presentation-->
                 <section id="presentation_site">
                     <div class="presentation_linear_gradient"></div>
                     <div class="localisation_restaurants">
@@ -39,6 +41,7 @@
                         </div>
                     </div>
                 </section>
+                <!--Website operation-->
                 <section id="website_functionalities">
                     <h1>Fonctionnement</h1>
                     <div class="functionalities">
@@ -71,6 +74,7 @@
                         </div>
                     </div>
                 </section>
+                <!--Restaurants introduction-->
                 <section id="presentation_restaurants">
                     <h1>Restaurants</h1>
                     <div id="presentation_restaurants_cartes">
