--- a/Menu_A_la_francaise.html
+++ b/Menu_A_la_francaise.html
@@ -37,7 +37,7 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <div class="dish_card">
+                                    <div class="dish_card" tabindex=0>
                                         <div class="dish_card_box">
                                         <div class="dish">
                                                 <div class="dish_name">
@@ -49,7 +49,7 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div class="dish_card" tabindex=0>
                                         <div class="dish_card_box">
                                             <div class="dish">
                                                 <div class="dish_name">
@@ -61,7 +61,7 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div class="dish_card" tabindex=0>
                                         <div class="dish_card_box">
                                             <div class="dish">
                                                 <div class="dish_name">
