--- a/Menu_A_la_francaise.html
+++ b/Menu_A_la_francaise.html
@@ -39,7 +39,7 @@
                                 <div class="dish_block entree">
                                     <div class="dish_card" tabindex=0>
                                         <div class="dish_card_box">
-                                        <div class="dish">
+                                        <div class="dish" tabindex=0>
                                                 <div class="dish_name">
                                                     <p class="span">Tartare de poulpe acidulé</p>
                                                     <p>Aux zestes d'orange</p>
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="dish_card" tabindex=0>
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div class="dish" tabindex=0>
                                                 <div class="dish_name">
                                                     <p class="span">Velouté de légumes d'antan</p>
                                                     <p>Carotte, panais, topinambour</p>
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="dish_card" tabindex=0>
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div class="dish" tabindex=0>
                                                 <div class="dish_name">
                                                     <p class="span">Soupe à l'oignon</p>
                                                     <p>Revisitée</p>
