--- a/Menu_A_la_francaise.html
+++ b/Menu_A_la_francaise.html
@@ -37,9 +37,9 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <div class="dish_card" tabindex=0>
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                        <div class="dish" tabindex=0>
+                                        <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Tartare de poulpe acidulé</p>
                                                     <p>Aux zestes d'orange</p>
@@ -49,9 +49,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card" tabindex=0>
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish" tabindex=0>
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Velouté de légumes d'antan</p>
                                                     <p>Carotte, panais, topinambour</p>
@@ -61,9 +61,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card" tabindex=0>
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish" tabindex=0>
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Soupe à l'oignon</p>
                                                     <p>Revisitée</p>
