test button for mobile responsive

--- a/Menu_A_la_francaise.html
+++ b/Menu_A_la_francaise.html
@@ -37,7 +37,7 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <div tabindex=0 class="dish_card">
+                                    <button class="dish_card">
                                         <div class="dish_card_box">
                                         <div tabindex=0 class="dish">
                                                 <div class="dish_name">
@@ -48,7 +48,7 @@
                                             </div>
                                             <i class="far fa-check-circle"></i>
                                         </div>
-                                    </div>
+                                    </button>
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <div tabindex=0 class="dish">
